# libonrisc

./: .gitignore  CMakeLists.txt  README.md  libonrisc.pc.in  libonrisc_noudev.pc.in  onrisc.i
cli/: CMakeLists.txt  onriscdipd.c  onriscgpiod.c  onrisctool.c
examples/: gpios.py  led.c  mpcie.c  rs485.c  rs485.py
include/: onrisc.h  onrisc.h.in  vssys.h
nodejs/: CMakeLists.txt  binding.gyp  index.js  libonrisc.js  onrisc_wrap.cxx  package.json.in
src/: CMakeLists.txt  devices.c  dips.c  gpios.c  leds.c  onrisc.c  system.c  uarts.c
swig/: CMakeLists.txt  binding.gyp  index.js  onrisc.i  package.json  package.json.in
test/: codespell-ignore.txt  test_onrisc.js  test_onrisc.py
